// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > displays with search button 1`] = `
<DocumentFragment>
  <div
    class="sc-gKkgUA kDJWYP aje-field__search is-medium"
  >
    <label
      class="sc-bdDsCe bLPJOA"
      for="react-aria-:r5:"
      id="react-aria-:r6:"
    >
      search
    </label>
    <div
      class="sc-eCQgVK lhFnxc aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r6:"
        class="sc-hKVpXn ecqUOI"
        id="react-aria-:r5:"
        tabindex="0"
        type="search"
        value=""
      />
      <button
        aria-label="search"
        class="sc-fuztkK sc-qdQOe fTXzHK iFSkaa aje-btn aje-icon-btn aje-btn--content is-medium"
        data-icon-button="true"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-iCECmn erxnfb aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > displays without button 1`] = `
<DocumentFragment>
  <div
    class="sc-gKkgUA kDJWYP aje-field__search is-medium"
  >
    <label
      class="sc-bdDsCe bLPJOA"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      search
    </label>
    <div
      class="sc-eCQgVK lhFnxc aje-combo-input"
    >
      <input
        aria-labelledby="react-aria-:r1:"
        class="sc-hKVpXn ecqUOI"
        id="react-aria-:r0:"
        tabindex="0"
        type="search"
        value=""
      />
      <button
        aria-label="search"
        class="sc-fuztkK sc-qdQOe fTXzHK iFSkaa aje-btn aje-icon-btn aje-btn--content is-medium"
        data-icon-button="true"
        tabindex="0"
        type="button"
      >
        <i
          aria-hidden="true"
          class="sc-iCECmn erxnfb aje-icon material-icons is-medium"
        >
          search
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
